pxml.parser.output
Zustand 3 Konflikte: 1 Schiebe/Reduziere
Zustand 24 Konflikte: 1 Schiebe/Reduziere
Zustand 27 Konflikte: 3 Schiebe/Reduziere
Zustand 28 Konflikte: 1 Reduziere/Reduziere
Zustand 33 Konflikte: 1 Schiebe/Reduziere
Zustand 35 Konflikte: 1 Schiebe/Reduziere
Zustand 41 Konflikte: 1 Schiebe/Reduziere
Zustand 45 Konflikte: 1 Schiebe/Reduziere
Zustand 46 Konflikte: 1 Schiebe/Reduziere
Zustand 47 Konflikte: 1 Schiebe/Reduziere
Zustand 50 Konflikte: 1 Schiebe/Reduziere
Zustand 51 Konflikte: 1 Schiebe/Reduziere
Zustand 52 Konflikte: 1 Schiebe/Reduziere
Zustand 58 Konflikte: 3 Schiebe/Reduziere
Zustand 59 Konflikte: 1 Schiebe/Reduziere
Zustand 60 Konflikte: 1 Schiebe/Reduziere
Zustand 61 Konflikte: 1 Schiebe/Reduziere
Zustand 62 Konflikte: 1 Schiebe/Reduziere
Zustand 63 Konflikte: 1 Schiebe/Reduziere
Zustand 68 Konflikte: 1 Schiebe/Reduziere
Zustand 82 Konflikte: 1 Schiebe/Reduziere
Zustand 86 Konflikte: 1 Schiebe/Reduziere
Zustand 87 Konflikte: 1 Schiebe/Reduziere
Zustand 88 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: xml $end

    1 xml: processing_tag root

    2 whites: /* leer */
    3       | whites WHITE
    4       | WHITE

    5 single_tag: whites comment_tag whites
    6           | whites empty_tag whites
    7           | whites processing_tag whites

    8 root: whites normal_tag_start nodes normal_tag_end whites
    9     | whites normal_tag_start content normal_tag_end whites
   10     | whites normal_tag_start normal_tag_end whites

   11 nodes: nodes single_tag
   12      | nodes root
   13      | single_tag
   14      | root

   15 name: name LETTER
   16     | name DIGIT
   17     | name OTHER
   18     | LETTER
   19     | OTHER

   20 content: content LETTER
   21        | content DIGIT
   22        | content EQ
   23        | content PARANTH
   24        | content WHITE
   25        | content OTHER
   26        | LETTER
   27        | DIGIT
   28        | EQ
   29        | PARANTH
   30        | WHITE
   31        | OTHER

   32 attribute: attribute whites name EQ PARANTH value PARANTH whites
   33          | whites name EQ PARANTH value PARANTH whites

   34 value: value LETTER
   35      | value DIGIT
   36      | value EQ
   37      | value WHITE
   38      | value OTHER
   39      | LETTER
   40      | DIGIT
   41      | EQ
   42      | WHITE
   43      | OTHER

   44 comment_tag: COMMENT_START content COMMENT_END

   45 empty_tag: NORMAL_START name EMPTY_END
   46          | NORMAL_START name attribute EMPTY_END

   47 processing_tag: PROCESSING_START content PROCESSING_END

   48 normal_tag_start: NORMAL_START name NORMAL_END
   49                 | NORMAL_START name attribute NORMAL_END

   50 normal_tag_end: NORMAL_END_START name NORMAL_END


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256)
LETTER (258) 15 18 20 26 34 39
DIGIT (259) 16 21 27 35 40
EQ (260) 22 28 32 33 36 41
PARANTH (261) 23 29 32 33
WHITE (262) 3 4 24 30 37 42
OTHER (263) 17 19 25 31 38 43
COMMENT_START (264) 44
COMMENT_END (265) 44
NORMAL_START (266) 45 46 48 49
NORMAL_END (267) 48 49 50
NORMAL_END_START (268) 50
EMPTY_END (269) 45 46
PROCESSING_START (270) 47
PROCESSING_END (271) 47


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (17)
    auf der linken Seite: 0
xml (18)
    auf der linken Seite: 1, auf der rechten Seite: 0
whites (19)
    auf der linken Seite: 2 3 4, auf der rechten Seite: 3 5 6 7 8 9
    10 32 33
single_tag (20)
    auf der linken Seite: 5 6 7, auf der rechten Seite: 11 13
root (21)
    auf der linken Seite: 8 9 10, auf der rechten Seite: 1 12 14
nodes (22)
    auf der linken Seite: 11 12 13 14, auf der rechten Seite: 8 11
    12
name (23)
    auf der linken Seite: 15 16 17 18 19, auf der rechten Seite: 15
    16 17 32 33 45 46 48 49 50
content (24)
    auf der linken Seite: 20 21 22 23 24 25 26 27 28 29 30 31, auf der rechten Seite:
    9 20 21 22 23 24 25 44 47
attribute (25)
    auf der linken Seite: 32 33, auf der rechten Seite: 32 46 49
value (26)
    auf der linken Seite: 34 35 36 37 38 39 40 41 42 43, auf der rechten Seite:
    32 33 34 35 36 37 38
comment_tag (27)
    auf der linken Seite: 44, auf der rechten Seite: 5
empty_tag (28)
    auf der linken Seite: 45 46, auf der rechten Seite: 6
processing_tag (29)
    auf der linken Seite: 47, auf der rechten Seite: 1 7
normal_tag_start (30)
    auf der linken Seite: 48 49, auf der rechten Seite: 8 9 10
normal_tag_end (31)
    auf der linken Seite: 50, auf der rechten Seite: 8 9 10


Zustand 0

    0 $accept: . xml $end

    PROCESSING_START  schiebe und gehe zu Zustand 1 über

    xml             gehe zu Zustand 2 über
    processing_tag  gehe zu Zustand 3 über


Zustand 1

   47 processing_tag: PROCESSING_START . content PROCESSING_END

    LETTER   schiebe und gehe zu Zustand 4 über
    DIGIT    schiebe und gehe zu Zustand 5 über
    EQ       schiebe und gehe zu Zustand 6 über
    PARANTH  schiebe und gehe zu Zustand 7 über
    WHITE    schiebe und gehe zu Zustand 8 über
    OTHER    schiebe und gehe zu Zustand 9 über

    content  gehe zu Zustand 10 über


Zustand 2

    0 $accept: xml . $end

    $end  schiebe und gehe zu Zustand 11 über


Zustand 3

    1 xml: processing_tag . root

    WHITE  schiebe und gehe zu Zustand 12 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 13 über
    root    gehe zu Zustand 14 über


Zustand 4

   26 content: LETTER .

    $default  reduziere mit Regel 26 (content)


Zustand 5

   27 content: DIGIT .

    $default  reduziere mit Regel 27 (content)


Zustand 6

   28 content: EQ .

    $default  reduziere mit Regel 28 (content)


Zustand 7

   29 content: PARANTH .

    $default  reduziere mit Regel 29 (content)


Zustand 8

   30 content: WHITE .

    $default  reduziere mit Regel 30 (content)


Zustand 9

   31 content: OTHER .

    $default  reduziere mit Regel 31 (content)


Zustand 10

   20 content: content . LETTER
   21        | content . DIGIT
   22        | content . EQ
   23        | content . PARANTH
   24        | content . WHITE
   25        | content . OTHER
   47 processing_tag: PROCESSING_START content . PROCESSING_END

    LETTER          schiebe und gehe zu Zustand 15 über
    DIGIT           schiebe und gehe zu Zustand 16 über
    EQ              schiebe und gehe zu Zustand 17 über
    PARANTH         schiebe und gehe zu Zustand 18 über
    WHITE           schiebe und gehe zu Zustand 19 über
    OTHER           schiebe und gehe zu Zustand 20 über
    PROCESSING_END  schiebe und gehe zu Zustand 21 über


Zustand 11

    0 $accept: xml $end .

    $default  annehmen


Zustand 12

    4 whites: WHITE .

    $default  reduziere mit Regel 4 (whites)


Zustand 13

    3 whites: whites . WHITE
    8 root: whites . normal_tag_start nodes normal_tag_end whites
    9     | whites . normal_tag_start content normal_tag_end whites
   10     | whites . normal_tag_start normal_tag_end whites

    WHITE         schiebe und gehe zu Zustand 22 über
    NORMAL_START  schiebe und gehe zu Zustand 23 über

    normal_tag_start  gehe zu Zustand 24 über


Zustand 14

    1 xml: processing_tag root .

    $default  reduziere mit Regel 1 (xml)


Zustand 15

   20 content: content LETTER .

    $default  reduziere mit Regel 20 (content)


Zustand 16

   21 content: content DIGIT .

    $default  reduziere mit Regel 21 (content)


Zustand 17

   22 content: content EQ .

    $default  reduziere mit Regel 22 (content)


Zustand 18

   23 content: content PARANTH .

    $default  reduziere mit Regel 23 (content)


Zustand 19

   24 content: content WHITE .

    $default  reduziere mit Regel 24 (content)


Zustand 20

   25 content: content OTHER .

    $default  reduziere mit Regel 25 (content)


Zustand 21

   47 processing_tag: PROCESSING_START content PROCESSING_END .

    $default  reduziere mit Regel 47 (processing_tag)


Zustand 22

    3 whites: whites WHITE .

    $default  reduziere mit Regel 3 (whites)


Zustand 23

   48 normal_tag_start: NORMAL_START . name NORMAL_END
   49                 | NORMAL_START . name attribute NORMAL_END

    LETTER  schiebe und gehe zu Zustand 25 über
    OTHER   schiebe und gehe zu Zustand 26 über

    name  gehe zu Zustand 27 über


Zustand 24

    8 root: whites normal_tag_start . nodes normal_tag_end whites
    9     | whites normal_tag_start . content normal_tag_end whites
   10     | whites normal_tag_start . normal_tag_end whites

    LETTER            schiebe und gehe zu Zustand 4 über
    DIGIT             schiebe und gehe zu Zustand 5 über
    EQ                schiebe und gehe zu Zustand 6 über
    PARANTH           schiebe und gehe zu Zustand 7 über
    WHITE             schiebe und gehe zu Zustand 28 über
    OTHER             schiebe und gehe zu Zustand 9 über
    NORMAL_END_START  schiebe und gehe zu Zustand 29 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites          gehe zu Zustand 30 über
    single_tag      gehe zu Zustand 31 über
    root            gehe zu Zustand 32 über
    nodes           gehe zu Zustand 33 über
    content         gehe zu Zustand 34 über
    normal_tag_end  gehe zu Zustand 35 über


Zustand 25

   18 name: LETTER .

    $default  reduziere mit Regel 18 (name)


Zustand 26

   19 name: OTHER .

    $default  reduziere mit Regel 19 (name)


Zustand 27

   15 name: name . LETTER
   16     | name . DIGIT
   17     | name . OTHER
   48 normal_tag_start: NORMAL_START name . NORMAL_END
   49                 | NORMAL_START name . attribute NORMAL_END

    LETTER      schiebe und gehe zu Zustand 36 über
    DIGIT       schiebe und gehe zu Zustand 37 über
    WHITE       schiebe und gehe zu Zustand 12 über
    OTHER       schiebe und gehe zu Zustand 38 über
    NORMAL_END  schiebe und gehe zu Zustand 39 über

    LETTER  [reduziere mit Regel 2 (whites)]
    WHITE   [reduziere mit Regel 2 (whites)]
    OTHER   [reduziere mit Regel 2 (whites)]

    whites     gehe zu Zustand 40 über
    attribute  gehe zu Zustand 41 über


Zustand 28

    4 whites: WHITE .
   30 content: WHITE .

    WHITE             reduziere mit Regel 4 (whites)
    WHITE             [reduziere mit Regel 30 (content)]
    COMMENT_START     reduziere mit Regel 4 (whites)
    NORMAL_START      reduziere mit Regel 4 (whites)
    PROCESSING_START  reduziere mit Regel 4 (whites)
    $default          reduziere mit Regel 30 (content)


Zustand 29

   50 normal_tag_end: NORMAL_END_START . name NORMAL_END

    LETTER  schiebe und gehe zu Zustand 25 über
    OTHER   schiebe und gehe zu Zustand 26 über

    name  gehe zu Zustand 42 über


Zustand 30

    3 whites: whites . WHITE
    5 single_tag: whites . comment_tag whites
    6           | whites . empty_tag whites
    7           | whites . processing_tag whites
    8 root: whites . normal_tag_start nodes normal_tag_end whites
    9     | whites . normal_tag_start content normal_tag_end whites
   10     | whites . normal_tag_start normal_tag_end whites

    WHITE             schiebe und gehe zu Zustand 22 über
    COMMENT_START     schiebe und gehe zu Zustand 43 über
    NORMAL_START      schiebe und gehe zu Zustand 44 über
    PROCESSING_START  schiebe und gehe zu Zustand 1 über

    comment_tag       gehe zu Zustand 45 über
    empty_tag         gehe zu Zustand 46 über
    processing_tag    gehe zu Zustand 47 über
    normal_tag_start  gehe zu Zustand 24 über


Zustand 31

   13 nodes: single_tag .

    $default  reduziere mit Regel 13 (nodes)


Zustand 32

   14 nodes: root .

    $default  reduziere mit Regel 14 (nodes)


Zustand 33

    8 root: whites normal_tag_start nodes . normal_tag_end whites
   11 nodes: nodes . single_tag
   12      | nodes . root

    WHITE             schiebe und gehe zu Zustand 12 über
    NORMAL_END_START  schiebe und gehe zu Zustand 29 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites          gehe zu Zustand 30 über
    single_tag      gehe zu Zustand 48 über
    root            gehe zu Zustand 49 über
    normal_tag_end  gehe zu Zustand 50 über


Zustand 34

    9 root: whites normal_tag_start content . normal_tag_end whites
   20 content: content . LETTER
   21        | content . DIGIT
   22        | content . EQ
   23        | content . PARANTH
   24        | content . WHITE
   25        | content . OTHER

    LETTER            schiebe und gehe zu Zustand 15 über
    DIGIT             schiebe und gehe zu Zustand 16 über
    EQ                schiebe und gehe zu Zustand 17 über
    PARANTH           schiebe und gehe zu Zustand 18 über
    WHITE             schiebe und gehe zu Zustand 19 über
    OTHER             schiebe und gehe zu Zustand 20 über
    NORMAL_END_START  schiebe und gehe zu Zustand 29 über

    normal_tag_end  gehe zu Zustand 51 über


Zustand 35

   10 root: whites normal_tag_start normal_tag_end . whites

    WHITE  schiebe und gehe zu Zustand 12 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 52 über


Zustand 36

   15 name: name LETTER .

    $default  reduziere mit Regel 15 (name)


Zustand 37

   16 name: name DIGIT .

    $default  reduziere mit Regel 16 (name)


Zustand 38

   17 name: name OTHER .

    $default  reduziere mit Regel 17 (name)


Zustand 39

   48 normal_tag_start: NORMAL_START name NORMAL_END .

    $default  reduziere mit Regel 48 (normal_tag_start)


Zustand 40

    3 whites: whites . WHITE
   33 attribute: whites . name EQ PARANTH value PARANTH whites

    LETTER  schiebe und gehe zu Zustand 25 über
    WHITE   schiebe und gehe zu Zustand 22 über
    OTHER   schiebe und gehe zu Zustand 26 über

    name  gehe zu Zustand 53 über


Zustand 41

   32 attribute: attribute . whites name EQ PARANTH value PARANTH whites
   49 normal_tag_start: NORMAL_START name attribute . NORMAL_END

    WHITE       schiebe und gehe zu Zustand 12 über
    NORMAL_END  schiebe und gehe zu Zustand 54 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 55 über


Zustand 42

   15 name: name . LETTER
   16     | name . DIGIT
   17     | name . OTHER
   50 normal_tag_end: NORMAL_END_START name . NORMAL_END

    LETTER      schiebe und gehe zu Zustand 36 über
    DIGIT       schiebe und gehe zu Zustand 37 über
    OTHER       schiebe und gehe zu Zustand 38 über
    NORMAL_END  schiebe und gehe zu Zustand 56 über


Zustand 43

   44 comment_tag: COMMENT_START . content COMMENT_END

    LETTER   schiebe und gehe zu Zustand 4 über
    DIGIT    schiebe und gehe zu Zustand 5 über
    EQ       schiebe und gehe zu Zustand 6 über
    PARANTH  schiebe und gehe zu Zustand 7 über
    WHITE    schiebe und gehe zu Zustand 8 über
    OTHER    schiebe und gehe zu Zustand 9 über

    content  gehe zu Zustand 57 über


Zustand 44

   45 empty_tag: NORMAL_START . name EMPTY_END
   46          | NORMAL_START . name attribute EMPTY_END
   48 normal_tag_start: NORMAL_START . name NORMAL_END
   49                 | NORMAL_START . name attribute NORMAL_END

    LETTER  schiebe und gehe zu Zustand 25 über
    OTHER   schiebe und gehe zu Zustand 26 über

    name  gehe zu Zustand 58 über


Zustand 45

    5 single_tag: whites comment_tag . whites

    WHITE  schiebe und gehe zu Zustand 12 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 59 über


Zustand 46

    6 single_tag: whites empty_tag . whites

    WHITE  schiebe und gehe zu Zustand 12 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 60 über


Zustand 47

    7 single_tag: whites processing_tag . whites

    WHITE  schiebe und gehe zu Zustand 12 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 61 über


Zustand 48

   11 nodes: nodes single_tag .

    $default  reduziere mit Regel 11 (nodes)


Zustand 49

   12 nodes: nodes root .

    $default  reduziere mit Regel 12 (nodes)


Zustand 50

    8 root: whites normal_tag_start nodes normal_tag_end . whites

    WHITE  schiebe und gehe zu Zustand 12 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 62 über


Zustand 51

    9 root: whites normal_tag_start content normal_tag_end . whites

    WHITE  schiebe und gehe zu Zustand 12 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 63 über


Zustand 52

    3 whites: whites . WHITE
   10 root: whites normal_tag_start normal_tag_end whites .

    WHITE  schiebe und gehe zu Zustand 22 über

    WHITE     [reduziere mit Regel 10 (root)]
    $default  reduziere mit Regel 10 (root)


Zustand 53

   15 name: name . LETTER
   16     | name . DIGIT
   17     | name . OTHER
   33 attribute: whites name . EQ PARANTH value PARANTH whites

    LETTER  schiebe und gehe zu Zustand 36 über
    DIGIT   schiebe und gehe zu Zustand 37 über
    EQ      schiebe und gehe zu Zustand 64 über
    OTHER   schiebe und gehe zu Zustand 38 über


Zustand 54

   49 normal_tag_start: NORMAL_START name attribute NORMAL_END .

    $default  reduziere mit Regel 49 (normal_tag_start)


Zustand 55

    3 whites: whites . WHITE
   32 attribute: attribute whites . name EQ PARANTH value PARANTH whites

    LETTER  schiebe und gehe zu Zustand 25 über
    WHITE   schiebe und gehe zu Zustand 22 über
    OTHER   schiebe und gehe zu Zustand 26 über

    name  gehe zu Zustand 65 über


Zustand 56

   50 normal_tag_end: NORMAL_END_START name NORMAL_END .

    $default  reduziere mit Regel 50 (normal_tag_end)


Zustand 57

   20 content: content . LETTER
   21        | content . DIGIT
   22        | content . EQ
   23        | content . PARANTH
   24        | content . WHITE
   25        | content . OTHER
   44 comment_tag: COMMENT_START content . COMMENT_END

    LETTER       schiebe und gehe zu Zustand 15 über
    DIGIT        schiebe und gehe zu Zustand 16 über
    EQ           schiebe und gehe zu Zustand 17 über
    PARANTH      schiebe und gehe zu Zustand 18 über
    WHITE        schiebe und gehe zu Zustand 19 über
    OTHER        schiebe und gehe zu Zustand 20 über
    COMMENT_END  schiebe und gehe zu Zustand 66 über


Zustand 58

   15 name: name . LETTER
   16     | name . DIGIT
   17     | name . OTHER
   45 empty_tag: NORMAL_START name . EMPTY_END
   46          | NORMAL_START name . attribute EMPTY_END
   48 normal_tag_start: NORMAL_START name . NORMAL_END
   49                 | NORMAL_START name . attribute NORMAL_END

    LETTER      schiebe und gehe zu Zustand 36 über
    DIGIT       schiebe und gehe zu Zustand 37 über
    WHITE       schiebe und gehe zu Zustand 12 über
    OTHER       schiebe und gehe zu Zustand 38 über
    NORMAL_END  schiebe und gehe zu Zustand 39 über
    EMPTY_END   schiebe und gehe zu Zustand 67 über

    LETTER  [reduziere mit Regel 2 (whites)]
    WHITE   [reduziere mit Regel 2 (whites)]
    OTHER   [reduziere mit Regel 2 (whites)]

    whites     gehe zu Zustand 40 über
    attribute  gehe zu Zustand 68 über


Zustand 59

    3 whites: whites . WHITE
    5 single_tag: whites comment_tag whites .

    WHITE  schiebe und gehe zu Zustand 22 über

    WHITE     [reduziere mit Regel 5 (single_tag)]
    $default  reduziere mit Regel 5 (single_tag)


Zustand 60

    3 whites: whites . WHITE
    6 single_tag: whites empty_tag whites .

    WHITE  schiebe und gehe zu Zustand 22 über

    WHITE     [reduziere mit Regel 6 (single_tag)]
    $default  reduziere mit Regel 6 (single_tag)


Zustand 61

    3 whites: whites . WHITE
    7 single_tag: whites processing_tag whites .

    WHITE  schiebe und gehe zu Zustand 22 über

    WHITE     [reduziere mit Regel 7 (single_tag)]
    $default  reduziere mit Regel 7 (single_tag)


Zustand 62

    3 whites: whites . WHITE
    8 root: whites normal_tag_start nodes normal_tag_end whites .

    WHITE  schiebe und gehe zu Zustand 22 über

    WHITE     [reduziere mit Regel 8 (root)]
    $default  reduziere mit Regel 8 (root)


Zustand 63

    3 whites: whites . WHITE
    9 root: whites normal_tag_start content normal_tag_end whites .

    WHITE  schiebe und gehe zu Zustand 22 über

    WHITE     [reduziere mit Regel 9 (root)]
    $default  reduziere mit Regel 9 (root)


Zustand 64

   33 attribute: whites name EQ . PARANTH value PARANTH whites

    PARANTH  schiebe und gehe zu Zustand 69 über


Zustand 65

   15 name: name . LETTER
   16     | name . DIGIT
   17     | name . OTHER
   32 attribute: attribute whites name . EQ PARANTH value PARANTH whites

    LETTER  schiebe und gehe zu Zustand 36 über
    DIGIT   schiebe und gehe zu Zustand 37 über
    EQ      schiebe und gehe zu Zustand 70 über
    OTHER   schiebe und gehe zu Zustand 38 über


Zustand 66

   44 comment_tag: COMMENT_START content COMMENT_END .

    $default  reduziere mit Regel 44 (comment_tag)


Zustand 67

   45 empty_tag: NORMAL_START name EMPTY_END .

    $default  reduziere mit Regel 45 (empty_tag)


Zustand 68

   32 attribute: attribute . whites name EQ PARANTH value PARANTH whites
   46 empty_tag: NORMAL_START name attribute . EMPTY_END
   49 normal_tag_start: NORMAL_START name attribute . NORMAL_END

    WHITE       schiebe und gehe zu Zustand 12 über
    NORMAL_END  schiebe und gehe zu Zustand 54 über
    EMPTY_END   schiebe und gehe zu Zustand 71 über

    WHITE     [reduziere mit Regel 2 (whites)]
    $default  reduziere mit Regel 2 (whites)

    whites  gehe zu Zustand 55 über


Zustand 69

   33 attribute: whites name EQ PARANTH . value PARANTH whites

    LETTER  schiebe und gehe zu Zustand 72 über
    DIGIT   schiebe und gehe zu Zustand 73 über
    EQ      schiebe und gehe zu Zustand 74 über
    WHITE   schiebe und gehe zu Zustand 75 über
    OTHER   schiebe und gehe zu Zustand 76 über

    value  gehe zu Zustand 77 über


Zustand 70

   32 attribute: attribute whites name EQ . PARANTH value PARANTH whites

    PARANTH  schiebe und gehe zu Zustand 78 über


Zustand 71

   46 empty_tag: NORMAL_START name attribute EMPTY_END .

    $default  reduziere mit Regel 46 (empty_tag)


Zustand 72

   39 value: LETTER .

    $default  reduziere mit Regel 39 (value)


Zustand 73

   40 value: DIGIT .

    $default  reduziere mit Regel 40 (value)


Zustand 74

   41 value: EQ .

    $default  reduziere mit Regel 41 (value)


Zustand 75

   42 value: WHITE .

    $default  reduziere mit Regel 42 (value)


Zustand 76

   43 value: OTHER .

    $default  reduziere mit Regel 43 (value)

